commit with issue

--- a/loveiswar/index.html
+++ b/loveiswar/index.html
@@ -7,7 +7,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Noto+Sans+Display:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>loveiswar.in</title>
+    <title>Love is War | Streetwear</title>
+    <meta name="description" content="Love is War is a fast fashion brand offering bold oversized streetwear for youth. Shop retro-inspired clothing made for your identity." />
+    <meta name="keywords" content="Love is War, streetwear, oversized t-shirts, fast fashion, retro clothing, youth fashion, urban wear" />
+    <meta name="robots" content="index, follow" />
+
   </head>
   <body>
     <div id="root"></div>
