--- a/loveiswar/index.html
+++ b/loveiswar/index.html
@@ -11,7 +11,14 @@
     <meta name="description" content="Love is War is a fast fashion brand offering bold oversized streetwear for youth. Shop retro-inspired clothing made for your identity." />
     <meta name="keywords" content="Love is War, streetwear, oversized t-shirts, fast fashion, retro clothing, youth fashion, urban wear" />
     <meta name="robots" content="index, follow" />
-
+    <meta name="keywords" content="Love is War clothing, Chennai streetwear, India streetwear, unapologetic clothing, lasting fashion, actual streetwear" />
+    <meta name="author" content="Love is War" />
+  
+    <meta property="og:title" content="Love is War Clothing | Chennai Streetwear" />
+    <meta property="og:description" content="Love is War is an unapologetic streetwear brand from Chennai, India. Lasting, not too fancy, and wearing values." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://loveiswar.in" />
+    <meta property="og:image" content="https://loveiswar.in/love-is-war.svg" />
   </head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CFV4F72720"></script>
